--- a/assets/styles/components/_gallery.scss
+++ b/assets/styles/components/_gallery.scss
@@ -72,7 +72,7 @@ body {
     .grid_gallery {
         display: grid; 
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(12, 13vw);
+        grid-template-rows: repeat(4, 13vw);
         gap: 1rem;
         width: 90%;
         margin: 0 auto;
@@ -81,65 +81,14 @@ body {
                 height: 100%;
                 background:none;
             }
-            &.gallery__item--1 {
-                grid-column: 1 ;
-                grid-row: 1; 
-              }
-
-              &.gallery__item--2 {
+            &.gallery__item--2 {
                 grid-column: 2 / span 2;
                 grid-row: 1/ span 2; 
-              }
-
-              &.gallery__item--3 {
-                grid-column: 4;
-                grid-row: 1; 
-              }
-
-              &.gallery__item--4 {
-                grid-column: 1;
-                grid-row: 2; 
-              }
-
-              &.gallery__item--5 {
-                grid-column: 1; 
-                grid-row: 3; 
-              }
-
-              &.gallery__item--6 {
-                grid-column: 2; 
-                grid-row: 3; 
-              }
-
-              &.gallery__item--7 {
-                grid-column: 4; 
-                grid-row: 2; 
-              }
-
-              &.gallery__item--8 {
-                grid-column: 3; 
-                grid-row: 3; 
-              }
-
-              &.gallery__item--9 {
-                grid-column: 4; 
-                grid-row: 3; 
-              }
-                
-                &.gallery__item--10 {
-                  grid-column: 1;
-                  grid-row: 4; 
-                }
-                
-                &.gallery__item--11 {
-                  grid-column: 2 / span 2; 
-                  grid-row: 4; 
-                }
-                
-                &.gallery__item--12 {
-                  grid-column: 4; 
-                  grid-row: 4; 
-                }
+            }
+            &.gallery__item--11 {
+                grid-column: 2 / span 2; 
+                grid-row: 4 / span 2; 
+            }
         }
     }
 
