--- a/templates/pages/page.html.twig
+++ b/templates/pages/page.html.twig
@@ -4,7 +4,7 @@
 
 {% set currentPath = path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) %}
 
-    <div class="policy_main">
+    <section class="policy_main">
 
         <div class="container" id="caption-border">
             <div class="card-panel">
@@ -18,5 +18,5 @@
             </div>
         </div>
 
-    </div>
+    </section>
 {% endblock %}
